Bug 1027009 - Gtk3 build with --enable-warnings-as-errors. r=karlt